[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiophyml"
version = "0.1.0"
description = "Physics-Informed Machine Learning for Cardiovascular Risk Assessment from ECG"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Anshuman Sahoo", email = "anshuman.sahoo@driems.ac.in"}]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "neurokit2>=0.2.10",
    "scikit-learn",
    "plotly"
]

[project.scripts]
cardiophyml = "cardiophyml.cli:main"

[project.urls]
Homepage = "https://github.com/anshuman-sahoo1999/cardiophyml"
Repository = "https://github.com/anshuman-sahoo1999/cardiophyml"
